<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>POM-Cucumber</groupId>
  <artifactId>POM-Cucumber</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>POM-Cucumber</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
 	<maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
  
    <!-- https://mvnrepository.com/artifact/junit/junit -->
	<dependency>
	    <groupId>junit</groupId>
	    <artifactId>junit</artifactId>
	    <version>4.12</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-junit -->
	<dependency>
	    <groupId>info.cukes</groupId>
	    <artifactId>cucumber-junit</artifactId>
	    <version>1.2.5</version>
	</dependency>
	
	<dependency>
		<groupId>info.cukes</groupId>
		<artifactId>cucumber-java</artifactId>
		<version>1.2.5</version>
	</dependency>
	
	<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-core -->
    <dependency>
        <groupId>info.cukes</groupId>
        <artifactId>cucumber-core</artifactId>
        <version>1.2.5</version>
    </dependency>
    
    <!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
     <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-jvm</artifactId>
      <version>1.2.5</version>
      <type>pom</type>
    </dependency>
   
    <!-- https://mvnrepository.com/artifact/info.cukes/gherkin--> 
    <dependency>
        <groupId>info.cukes</groupId>
        <artifactId>gherkin</artifactId>
        <version>2.12.2</version>
    </dependency>

	 <!-- https://mvnrepository.com/artifact/com.github.adedayo.intellij.sdk/cucumber-jvm-formatter -->
	<dependency>
	    <groupId>com.github.adedayo.intellij.sdk</groupId>
	    <artifactId>cucumber-jvm-formatter</artifactId>
	    <version>142.1</version>
	</dependency>
	 
	<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
	<dependency>
	    <groupId>org.seleniumhq.selenium</groupId>
	    <artifactId>selenium-java</artifactId>
	    <version>3.4.0</version>
	</dependency>

  <!-- https://mvnrepository.com/artifact/log4j/log4j -->
	<dependency>
	    <groupId>log4j</groupId>
	    <artifactId>log4j</artifactId>
	    <version>1.2.17</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
	<dependency>
	    <groupId>com.google.code.gson</groupId>
	    <artifactId>gson</artifactId>
	    <version>2.8.2</version>
	</dependency>
    
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>5.1.6</version>
     </dependency>
   
    <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
 	<dependency>
	 	<groupId>net.masterthought</groupId>
	 	<artifactId>cucumber-reporting</artifactId>
	 	<version>3.15.0</version>
 	</dependency>
	
</dependencies>


 <build>
    <plugins>
		<plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.5.1</version>
            <configuration>
                <fork>true</fork>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.20.1</version>
	            <dependencies>
	                <dependency>
	                    <groupId>org.apache.maven.surefire</groupId>
	                    <artifactId>surefire-junit47</artifactId>
	                    <version>2.18.1</version>
	                </dependency>
	            </dependencies>
				<configuration>
                    <parallel>classes</parallel>
                    <useUnlimitedThreads>true</useUnlimitedThreads>
                    <forkCount>5</forkCount>
        			<reuseForks>true</reuseForks> 
        			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <includes>
                    	<include>**/*Runner.java</include>
                    </includes>
                </configuration>
        </plugin>
	</plugins>
 </build>

</project>
